# asyncio-loop-local

./: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
asyncio_loop_local/: __init__.py  _atexit.py  _enter.py  _enter_once.py  _singleton.py  _sticky_acm.py  _sticky_singleton_acm.py  _storage.py
tests/: common.py  test_atexit.py  test_common.py  test_enter.py  test_enter_once.py  test_enter_once_and_singleton.py  test_singleton.py  test_sticky_acm.py  test_sticky_singleton_acm.py  test_storage.py
